<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:onClick="addLoungeSpecial"
                android:id="@+id/numbers"
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="@string/lounge_special"
                />

            <TextView
                android:id="@+id/family"
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="@string/burgers" />

            <TextView
                android:id="@+id/colors"
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="Drinks" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phrases"
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="@string/chicken_pizza" />

            <TextView
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="Sandwiches" />

            <TextView
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="Meals" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="@string/beef_pizza" />

            <TextView
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="Sides" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="@string/veggie_pizza" />

            <TextView
                style="@style/CategoryStyle"
                android:background="@color/Button_Color"
                android:text="Desserts" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="Cart"
                android:textSize="30dp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="0 items"
                android:textSize="30dp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="Rs0.00"
                android:textSize="30dp"
                android:textColor="#000000"/>
        </LinearLayout>
        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your cart is empty"
            android:textSize="30dp"
            android:textColor="#000000"
            android:layout_margin="80dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckOut"
            android:textSize="30dp"
            android:background="@color/Button_Color"/>
    </LinearLayout>
</LinearLayout>
